Change color to button Inscription for `Alimentation Locale`
This refs / ##

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -201,6 +201,9 @@
         color: @theme-creafarm !important;
     }
     //CONTENT
+    #content a.bouton{
+        background: @theme-creafarm !important;
+    }
     #content h2,
     #content h3{
         color: @theme-creafarm;
@@ -259,6 +262,9 @@
         color: @theme-potager !important;
     }
     //CONTENT
+    #content a.bouton{
+        background: @theme-potager !important;
+    }
     #content h2,
     #content h3{
         color: @theme-potager;
@@ -297,6 +303,9 @@
         color: @theme-acheter-local !important;
     }
     //CONTENT
+    #content a.bouton{
+        background: @theme-acheter-local !important;
+    }
     #content h2,
     #content h3{
         color: @theme-acheter-local;
@@ -327,6 +336,9 @@
         color: @theme-professionnel !important;
     }
     //CONTENT
+    #content a.bouton{
+        background: @theme-professionnel !important;
+    }
     #content h2,
     #content h3{
         color: @theme-professionnel;
