Remove footer in mini-site mode

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -462,3 +462,9 @@
         .facet(1, @columns, 1);
     }
 }
+.in-minisite-out-portal.subsection-commerce-alimentation-locale #footer-sitemap {
+    display: none;
+}
+.in-minisite-out-portal.subsection-commerce-alimentation-locale #portal-footer-wrapper .row {
+    background: transparent;
+}
