Change css for .slider-multiple .carousel

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -451,8 +451,14 @@ dl.portlet ul.navTreeLevel1 .navTreeItem {
 
 #content #flex #carousel-actualites .flex-viewport .flex-caption h2 a {
     color: #333 !important;
+    font-size: 100%;
 }
-
+.slider-multiple .carousel li {
+    margin-right: 5px;
+}
+.slider-multiple .flexslider .slides > li{
+    max-width: 294px !important;
+}
 .publication-date {
     display: none;
 }
