Add style responsive for reinventons liege

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -521,6 +521,11 @@ form input.dislike-button{
     }
 }
 @media screen and (max-width: 600px) {
+    .bloc-2, .bloc-3 {
+        width: 100%;
+        padding: 1rem 2rem;
+        box-sizing: border-box;
+    }
     // Timeline
     // Avec date visible
 //     .portaltype-project #timeline{
