--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -5,7 +5,10 @@
 #portal-siteactions li {
     margin: 0 3em 0 0;
 }
-
+#cpskin-slogan-description::after{
+    content: "A";
+    color: transparent;
+}
 #portal-logo > img {
     width: 80%;
     margin-top: 10%;
