Add hover on "more button" for reinventons liege

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -52,8 +52,8 @@
     width: 75%;
     margin-top: 0.3em;
 }
-.homepage-bloc-item-more {
-    background-color: #000000 !important;
+.bloc-2 .homepage-bloc-item .homepage-bloc-item-more {
+    background-color: #000000;
     font-weight: 400;
     font-size: 0.8em;
     width: auto;
@@ -62,14 +62,14 @@
     vertical-align: top;
     margin-top: 0.4em;
 }
-.homepage-bloc-item-more a{
+.bloc-2 .homepage-bloc-item .homepage-bloc-item-more{
     padding: 0.1em 1em;
-    color: #ffffff !important;
+    color: #ffffff;
 }
 .homepage-bloc-item-description {
     font-family: Abel;
 }
-.bloc-2 .homepage-bloc-item::before {
+.bloc-2 .homepage-bloc-item a::before {
     content: "\e848";
     font-family: fontello;
     background-color: #000000;
@@ -81,6 +81,9 @@
     position: absolute;
     left: 0;
     top: 8px;
+}
+.bloc-2 .homepage-bloc-item a:hover .homepage-bloc-item-more{
+    color: #d7004e;
 }
 
 .main-homepage.template-folderview #portal-columns{
