change css for footer

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -704,6 +704,8 @@ fieldset#form-groups-related_contacts,
     width: calc(100% / 3 - 0.5em);
     vertical-align: top;
     box-sizing: border-box;
+    max-width: calc(100% / 3 - 0.5em) !important;
+    padding: 0 !important;
 }
 .bloc-info {
     border: 1px solid #464646;
@@ -750,6 +752,8 @@ font-size:95%;
     margin-left: -1.5em;
     display: block;
     float: left;
+    top: 36%;
+    left: 6%;
 }
 .footer-bloc .horloge::before {
     content: "\E806";
@@ -757,6 +761,7 @@ font-size:95%;
     margin-left: -1.5em;
     display: block;
     float: left;
+    left: 7%;
 }
 .footer-bloc .horloge,
 .footer-bloc .mail {
