change css for footer

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -705,7 +705,7 @@ fieldset#form-groups-related_contacts,
     vertical-align: top;
     box-sizing: border-box;
     max-width: calc(100% / 3 - 0.5em) !important;
-    padding: 0 !important;
+    padding: 0;
 }
 .bloc-info {
     border: 1px solid #464646;
