Change width for project to homepage

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -409,6 +409,7 @@
     .project{
         border: 1px solid #ddd;
         display: block;
+        width: auto;
 
         .date_project{
             padding: 0.1em 0.5em;
