Change css to use the date in slider

--- a/cpskin/diazotheme/spirit/static/less/minisites.less
+++ b/cpskin/diazotheme/spirit/static/less/minisites.less
@@ -197,25 +197,35 @@ body.subsection-culture-museums-la-boverie #visual-portal-wrapper {
     top: -1em;
     bottom: -5.5em;
 }
-.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption,
-.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption,
-.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption,
-.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption{
+.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption-inner,
+.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption-inner,
+.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption-inner,
+.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption-inner{
   height: 145px;
   margin: 0;
   padding: 0.5em 2em;
   width: 100%;
 }
+.subsection-culture-musees-la-boverie,
+.subsection-kultur-museen-la-boverie,
+.subsection-cultuur-musea-la-boverie,
+.subsection-culture-museums-la-boverie{
+  #slider-a-la-une.flexslider .flex-category-date{
+    top: 89%;
+    width: 100%
+  }
+}
+
 .subsection-culture-musees-la-boverie .slider-carousel .flex-caption p,
 .subsection-kultur-museen-la-boverie .slider-carousel .flex-caption p,
 .subsection-cultuur-musea-la-boverie .slider-carousel .flex-caption p,
 .subsection-culture-museums-la-boverie .slider-carousel .flex-caption p{
   display: none;
 }
-.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
-.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
-.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
-.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption::after{
+.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption-inner::after,
+.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption-inner::after,
+.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption-inner::after,
+.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption-inner::after{
   display: none;
 }
 .subsection-culture-musees-la-boverie #slider-a-la-une .read-next-link,
