Overload of the width defined in the custom to Liège for .subsection-commerce-alimentation-locale #facet_view .project

--- a/cpskin/diazotheme/spirit/static/less/producteur.less
+++ b/cpskin/diazotheme/spirit/static/less/producteur.less
@@ -128,6 +128,7 @@
         .project{
             border: 1px solid #ddd;
             display: block;
+            width: 97%;
 
             .date_project{
                 padding: 0.1em 0.5em;
