--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -1468,3 +1468,18 @@ a.btn-search {
     padding: 0.25em 0.5em;
     border-radius: 0.5em;
 }
+#top-languages{
+    .actionMenuContent {
+    background: #000;
+    padding: 1em;
+        a:hover{
+            color: @theme;
+        }
+    }
+    a:focus{
+        outline: none !important;
+    }
+}
+#top-languages dl.actionMenu.activated dt{
+    margin: 0 0.25em;
+}
