Change css for better tab navigation

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -63,10 +63,10 @@
     text-align: center;
 }
 
-#visual-portal-wrapper a#portal-logo:focus,
-#visual-portal-wrapper a#portal-logo:focus img{
-    outline: none;
-}
+// #visual-portal-wrapper a#portal-logo:focus,
+// #visual-portal-wrapper a#portal-logo:focus img{
+//     outline: none;
+// }
 .portletNavigationTree .portletHeader {
     background: @theme;
     padding: 1em;
@@ -368,9 +368,9 @@ dl.portlet ul.navTreeLevel1 .navTreeItem {
     display: none;
 }
 //navigation
-#portal-globalnav li a:focus {
-    outline: medium none;
-}
+// #portal-globalnav li a:focus {
+//     outline: medium none;
+// }
 
 #nav-wrapper ul.navTreeLevel0 li a{
     padding: 1.4em 1.75em !important;
