--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -310,9 +310,9 @@ figure.image figcaption {
     border-radius: 0;
 }
 
-#visual-portal-wrapper .portal-globalnav-cpskinmenu a:focus{
-    outline: thin none;
-}
+// #visual-portal-wrapper .portal-globalnav-cpskinmenu a:focus{
+//     outline: thin none;
+// }
 #nav-wrapper ul.navTreeLevel0 {
     background: @nav-background;
     border-top: 0.5em solid @theme;
@@ -1476,9 +1476,9 @@ a.btn-search {
             color: @theme;
         }
     }
-    a:focus{
-        outline: none !important;
-    }
+    // a:focus{
+    //     outline: none !important;
+    // }
 }
 #top-languages dl.actionMenu.activated dt{
     margin: 0 0.25em;
